add new section

--- a/index.html
+++ b/index.html
@@ -115,11 +115,9 @@
           <div class="timeline-dot"></div>
           <div class="timeline-date">2023-2024</div>
           <div class="timeline-content">
-            <h3>Rajshahi University</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Accusantium recusandae dolorem repellendus blanditiis dolore quas?
-            </p>
+            <h3>Honours</h3>
+            <p>Rajshahi University</p><br>
+            <p>Running...</p>
           </div>
         </div>
       </div>
@@ -131,44 +129,36 @@
       <div class="services-container">
         <div class="service-box">
           <div class="service-info">
-            <h4>UI Design</h4>
+            <h4>Ceramic Design</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta,
-              expedita minus iste accusamus voluptas libero eos assumenda harum
-              sint odio.
+              We offer custom ceramic design services, creating unique, hand-made pieces tailored to your needs. Whether you want functional pottery, decorative art, or personalized gifts, our skilled artisans bring your vision to life with high-quality materials and attention to detail. Contact us today to design your perfect ceramic piece!
             </p>
           </div>
         </div>
 
         <div class="service-box">
           <div class="service-info">
-            <h4>Frontend Development</h4>
+            <h4>Sculpture Design</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta,
-              expedita minus iste accusamus voluptas libero eos assumenda harum
-              sint odio.
+              We specialize in custom sculpture design, crafting one-of-a-kind pieces that bring your vision to life. Whether you're looking for a striking art installation, a personalized gift, or a unique addition to your space, our expert sculptors create stunning, durable sculptures in a variety of materials.
             </p>
           </div>
         </div>
 
         <div class="service-box">
           <div class="service-info">
-            <h4>Backend Development</h4>
+            <h4>Pottery Designer</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta,
-              expedita minus iste accusamus voluptas libero eos assumenda harum
-              sint odio.
+              It sounds like you're either looking for pottery designs that cater to a buyer's needs or you're considering how to offer pottery design services for buyers. 
             </p>
           </div>
         </div>
 
         <div class="service-box">
           <div class="service-info">
-            <h4>Graphic Designer</h4>
+            <h4>Ceramic Manufacturer</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta,
-              expedita minus iste accusamus voluptas libero eos assumenda harum
-              sint odio.
+              As a ceramic manufacturer, providing excellent service to buyers involves understanding their specific needs, offering high-quality products, and ensuring clear communication throughout the order process. Key services include customizing designs, offering samples, flexible order options, and timely delivery with secure packaging.
             </p>
           </div>
         </div>
@@ -182,10 +172,10 @@
         <div class="wrapper">
           <div class="testimonial-item">
             <img
-              src="/Image/testimonials-section-photo/pexels-chaitaastic-1918290.jpg"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSK14FRBKv2XDQKYzK1jJ_GPQQo_kDGBuCGZg&s"
               alt=""
             />
-            <h2>Marilyn</h2>
+            <h2>Aiden</h2>
             <div class="rating">
               <i class="bx bxs-star" id="star"></i>
               <i class="bx bxs-star" id="star"></i>
@@ -194,15 +184,13 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-              vel dolorem exercitationem aut ipsa nobis hic incidunt a, illum
-              fugit?
+              We’ve been working with you for over a year now, and the experience has been nothing short of excellent.
             </p>
           </div>
 
           <div class="testimonial-item">
-            <img
-              src="/Image/testimonials-section-photo/pexels-deeanacreates-1646953.jpg"
+            <img style="height: 145px;"
+              src="/Image/testimonials-section-photo/222.jpg"
               alt=""
             />
             <h2>Julio</h2>
@@ -214,18 +202,16 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-              vel dolorem exercitationem aut ipsa nobis hic incidunt a, illum
-              fugit?
+              We’ve collaborated with you on multiple projects, and every experience has been great. Their ceramics always meet our high standards. 
             </p>
           </div>
 
           <div class="testimonial-item">
-            <img
-              src="/Image/testimonials-section-photo/pexels-jadson-thomas-164235-542556.jpg"
+            <img style="height: 145px;"
+              src="https://media.istockphoto.com/id/1159212661/photo/portrait-of-successful-young-asian-businesswoman%C3%A2%C2%A0at-office-colleagues-in-background.jpg?s=612x612&w=0&k=20&c=iXO5_SFF7aEj2x7zLqdhW1ZxzEoPpkSYVo-xs6uAh-k="
               alt=""
             />
-            <h2>Ketrina Art</h2>
+            <h2>Ketrina</h2>
             <div class="rating">
               <i class="bx bxs-star" id="star"></i>
               <i class="bx bxs-star" id="star"></i>
@@ -234,9 +220,7 @@
               <i class="bx bxs-star" id="star"></i>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-              vel dolorem exercitationem aut ipsa nobis hic incidunt a, illum
-              fugit?
+              Our restaurant needed a new line of handmade ceramics, and you delivered beyond our expectations.
             </p>
           </div>
         </div>
