--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio - Kollani Rani</title>
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="shortcut icon" href="/Image/logo/WhatsApp Image 2025-01-27 at 23.37.41_ee23ab23.jpg" type="image/x-icon">
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
 
     <!--  -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
