add mixltup component

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         </div>
       </div>
       <div class="home-img">
-        <!-- <a href="https://ibb.co.com/R2gt8Zv"><img src="https://i.ibb.co.com/XXW6HN2/image-1.jpg" alt="image-1"></a> -->
+        <a href="https://ibb.co.com/R2gt8Zv"><img src="https://i.ibb.co.com/XXW6HN2/image-1.jpg" alt="image-1"></a>
         <!-- <img src="/Image/banner-photo/1737681650865.jpg" alt="Kollani-image"> -->
-        <a href="https://ibb.co.com/pPN0qKd"
+        <!-- <a href="https://ibb.co.com/pPN0qKd"
           ><img
             src="https://i.ibb.co.com/rtq79pH/1737681650865.jpg"
             alt="1737681650865"
-        /></a>
+        /></a> -->
       </div>
     </section>
 
@@ -164,6 +164,104 @@
         </div>
       </div>
     </section>
+
+    <!-- Skills Section -->
+
+    <section id="portfolio" class="porfolio">
+      <div class="main-text">
+        <span>What i will do for you</span>
+        <h2>Latest Project</h2>
+      </div>
+
+      <div class="containerS">
+        <div class="fillter-bittons">
+          <button class="btn" data-filter="all">All</button>
+          <button class="btn" data-filter=".product">Product</button>
+          <button class="btn" data-filter=".inter">Interacting</button>
+          <button class="btn" data-filter=".ceramic">Ceramic</button>
+        </div>
+
+        <div class="portfolio-gallery">
+          <div class="port-box mix product">
+            <div class="port-image">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtxsQ6H9x8erLhyVvjfd3_ihrEUd7jqAWjMg&s" alt="">
+            </div>
+            <div class="port-content">
+              <h3>Ceramic Design</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis aut iure vero quidem at, aliquid repudiandae facilis tempore totam.</p>
+              <a href=""><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+
+          <div class="port-box mix product">
+            <div class="port-image">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtxsQ6H9x8erLhyVvjfd3_ihrEUd7jqAWjMg&s" alt="">
+            </div>
+            <div class="port-content">
+              <h3>Ceramic Design</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis aut iure vero quidem at, aliquid repudiandae facilis tempore totam.</p>
+              <a href=""><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+
+          <div class="port-box mix product">
+            <div class="port-image">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtxsQ6H9x8erLhyVvjfd3_ihrEUd7jqAWjMg&s" alt="">
+            </div>
+            <div class="port-content">
+              <h3>Ceramic Design</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis aut iure vero quidem at, aliquid repudiandae facilis tempore totam.</p>
+              <a href=""><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+          <div class="port-box mix inter">
+            <div class="port-image">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtxsQ6H9x8erLhyVvjfd3_ihrEUd7jqAWjMg&s" alt="">
+            </div>
+            <div class="port-content">
+              <h3>Ceramic Design</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis aut iure vero quidem at, aliquid repudiandae facilis tempore totam.</p>
+              <a href=""><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+          <div class="port-box mix ceramic">
+            <div class="port-image">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtxsQ6H9x8erLhyVvjfd3_ihrEUd7jqAWjMg&s" alt="">
+            </div>
+            <div class="port-content">
+              <h3>Ceramic Design</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis aut iure vero quidem at, aliquid repudiandae facilis tempore totam.</p>
+              <a href=""><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+          <div class="port-box mix ceramic">
+            <div class="port-image">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtxsQ6H9x8erLhyVvjfd3_ihrEUd7jqAWjMg&s" alt="">
+            </div>
+            <div class="port-content">
+              <h3>Ceramic Design</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis aut iure vero quidem at, aliquid repudiandae facilis tempore totam.</p>
+              <a href=""><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+          <div class="port-box mix ceramic">
+            <div class="port-image">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtxsQ6H9x8erLhyVvjfd3_ihrEUd7jqAWjMg&s" alt="">
+            </div>
+            <div class="port-content">
+              <h3>Ceramic Design</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis aut iure vero quidem at, aliquid repudiandae facilis tempore totam.</p>
+              <a href=""><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+         
+          
+        </div>
+      </div>
+
+    </section>
+
+     <!-- Skills Section End -->
 
     <div class="testimonials" id="testimonials">
       <div class="testimonials-box">
@@ -409,6 +507,8 @@
       <p class="copyright">@ Kollani Rani | All Right Reserved</p>
     </footer>
 
+
+    <script src="mixitup.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
