--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         </div>
       </div>
       <div class="home-img">
-        <!-- <a href="https://ibb.co.com/R2gt8Zv"><img src="https://i.ibb.co.com/XXW6HN2/image-1.jpg" alt="image-1"></a> -->
+        <a href="https://ibb.co.com/R2gt8Zv"><img src="https://i.ibb.co.com/XXW6HN2/image-1.jpg" alt="image-1"></a>
         <!-- <img src="/Image/banner-photo/1737681650865.jpg" alt="Kollani-image"> -->
-        <a href="https://ibb.co.com/pPN0qKd"
+        <!-- <a href="https://ibb.co.com/pPN0qKd"
           ><img
             src="https://i.ibb.co.com/rtq79pH/1737681650865.jpg"
             alt="1737681650865"
-        /></a>
+        /></a> -->
       </div>
     </section>
 
@@ -422,10 +422,10 @@
       </div>
     </div>
 
-    <section class="contact" id="contact">
+    <div class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
 
-      <section id="section-wrapper">
+      <div id="section-wrapper">
         <div class="box-wrapper">
           <div class="info-wrap">
             <h2 class="info-title">Contact Information</h2>
@@ -569,65 +569,36 @@
             />
           </div>
         </div>
-      </section>
-
-    
-
-     
-    </section>
-
-    <footer>
-      <div class="waves">
-        <div class="wave" id="wave1"></div>
-        <div class="wave" id="wave2"></div>
-        <div class="wave" id="wave3"></div>
-        <div class="wave" id="wave4"></div>
       </div>
-      <ul class="social-iconsF">
-        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-      </ul>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Education</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <p class="copyright">@ Kollani Rani | All Right Reserved</p>
-    </footer>
+    </div>
 
+    <div class="footer-parent">
+      <footer>
+        <div class="waves">
+          <div class="wave" id="wave1"></div>
+          <div class="wave" id="wave2"></div>
+          <div class="wave" id="wave3"></div>
+          <div class="wave" id="wave4"></div>
+        </div>
+        <ul class="social-iconsF">
+          <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+          <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+          <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+          <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+        </ul>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <p class="copyright">@ Kollani Rani | All Right Reserved</p>
+      </footer>
+    </div>
 
-    <!-- <footer class="footer">
-      <div class="social">
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-        <a href="#"><i class="bx bxl-youtube"></i></a>
-        <a href="#"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
-      </div>
-
-      <ul class="list">
-        <li>
-          <a href="#">FAQ</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">About Me</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-        <li>
-          <a href="#">Testimonials</a>
-        </li>
-      </ul>
-      <p class="copyright">@ Kollani Rani | All Right Reserved</p>
-    </footer> -->
+   
 
 
     <script src="mixitup.min.js"></script>
