--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         </div>
       </div>
       <div class="home-img">
-        <a href="https://ibb.co.com/R2gt8Zv"><img src="https://i.ibb.co.com/XXW6HN2/image-1.jpg" alt="image-1"></a>
+        <!-- <a href="https://ibb.co.com/R2gt8Zv"><img src="https://i.ibb.co.com/XXW6HN2/image-1.jpg" alt="image-1"></a> -->
         <!-- <img src="/Image/banner-photo/1737681650865.jpg" alt="Kollani-image"> -->
-        <!-- <a href="https://ibb.co.com/pPN0qKd"
+        <a href="https://ibb.co.com/pPN0qKd"
           ><img
             src="https://i.ibb.co.com/rtq79pH/1737681650865.jpg"
             alt="1737681650865"
-        /></a> -->
+        /></a>
       </div>
     </section>
      <!-- Banner End -->
